src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/namedarg-after-posarg.tessla
in x: Events[Int]
def div(a: Events[Int], b: Events[Int]) = a / b

out div(b = 10, x) as r
